<resources>
    <string name="app_name">backpack</string>
    <string name="one_package_1">One package 1</string>
    <string name="_3">3</string>
    <string name="add">Add</string>
    <string name="destinations">Destinations</string>
    <string name="national_museum">National Museum</string>
    <string name="independance_squre">Independance Squre</string>
    <string name="planetarium">Planetarium</string>
    <string name="_20_000_00">20,000.00</string>
    <string name="budget">Budget</string>
    <string name="no_of_people">No. of People</string>
    <string name="name">Name</string>
    <string name="create_one_day_tour">Create One Day Tour</string>
    <string name="view1">VIEW</string>
    <string name="view2">VIEW</string>
    <string name="one_package_4">One Package 4</string>
    <string name="one_package_3">One Package 3</string>
    <string name="one_package_2">One Package 2</string>
    <string name="view3">VIEW</string>
    <string name="view4">VIEW</string>
    <string name="one_day_packages">One Day Packages</string>
    <string name="onepackage_1">One Package 1</string>
    <string name="create_one_day_package">Create One Day Package</string>
    <string name="create_multiple_day_package">Create Multiple Day Package</string>
    <string name="multiple_day_packages">Multiple Day Packages</string>
    <string name="todo">TODO</string>
    <string name="new_hotel">NEW HOTEL</string>
    <string name="hotels">HOTELS</string>
    <string name="welcome">WELCOME</string>
    <string name="language_tips">LANGUAGE TIPS</string>
    <string name="converter">CONVERTER</string>
    <string name="schedule">SCHEDULE</string>
    <string name="trip_planner">TRIP PLANNER</string>
    <string name="explore">EXPLORE</string>
    <string name="where_am_i">WHERE AM I?</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="_001">001</string>
    <string name="id">Id</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
    <string name="one_day_packages">One Day Packages</string>
    <string name="todo">TODO</string>
    <string name="see_map">See Map</string>
    <string name="national_zoological_gardens_of_sri_lanka_is_a_zoological_garden_in_dehiwala_sri_lanka_founded_in_1936">National Zoological Gardens of Sri Lanka is a zoological garden in Dehiwala, Sri Lanka, founded in 1936.</string>
    <string name="hours_closed_opens_8_30am_mon">Hours: Closed ⋅ Opens 8:30AM Mon</string>
    <string name="address_120_galvihara_rd_dehiwala_mount_lavinia">Address: 120 Galvihara Rd, Dehiwala-Mount Lavinia</string>
    <string name="phone_0112_712_751">Phone: 0112 712 751</string>
    <string name="book_now">Book now</string>
</resources>